tests/expectations/compiler/tuple/tuple_in_record_fail.out
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:4:9
     |
   4 |         amounts: (u64, u64),
     |         ^^^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {
     |         ^^^^^^^^^
